syntax = "proto3";

package helloworld;

service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse) {};
    rpc Image (ImageRequest) returns (ImageResponse) {};
    rpc ImageStream(ImageRequest) returns (stream ImageResponse) {};
}

message HelloRequest{
    string name = 1;
}

message HelloResponse {
    string response = 1; 
}

message ImageRequest{
    string url = 1;
}

message ImageResponse {
    bytes image_data = 1;
}
